Revert "Commit of all projects"
This reverts commit bc260a46fd2bf9f8bd6669ee7d7800e72ecf987c.

--- a/PHE_FRDM/.project
+++ b/PHE_FRDM/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ATEAM_ROBO</name>
+	<name>PHE_FRDM</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -32,9 +32,14 @@
 	</natures>
 	<linkedResources>
 		<link>
-			<name>Static_Code/IO_Map/MK22F12.h</name>
+			<name>Common</name>
+			<type>2</type>
+			<locationURI>PARENT-1-PROJECT_LOC/DummyProject/Common</locationURI>
+		</link>
+		<link>
+			<name>Static_Code/IO_Map/MKL25Z4.h</name>
 			<type>1</type>
-			<location>C:/Freescale/KDS_1.1.1/eclipse/ProcessorExpert/lib/Kinetis/iofiles/MK22F12.h</location>
+			<location>C:/Freescale/KDS_1.1.1/eclipse/ProcessorExpert/lib/Kinetis/iofiles/MKL25Z4.h</location>
 		</link>
 		<link>
 			<name>Static_Code/PDD/ADC_PDD.h</name>
@@ -42,24 +47,14 @@
 			<location>C:/Freescale/KDS_1.1.1/eclipse/ProcessorExpert/lib/Kinetis/pdd/inc/ADC_PDD.h</location>
 		</link>
 		<link>
-			<name>Static_Code/PDD/CAN_PDD.h</name>
-			<type>1</type>
-			<location>C:/Freescale/KDS_1.1.1/eclipse/ProcessorExpert/lib/Kinetis/pdd/inc/CAN_PDD.h</location>
-		</link>
-		<link>
 			<name>Static_Code/PDD/CMP_PDD.h</name>
 			<type>1</type>
 			<location>C:/Freescale/KDS_1.1.1/eclipse/ProcessorExpert/lib/Kinetis/pdd/inc/CMP_PDD.h</location>
 		</link>
 		<link>
-			<name>Static_Code/PDD/CMT_PDD.h</name>
+			<name>Static_Code/PDD/COP_PDD.h</name>
 			<type>1</type>
-			<location>C:/Freescale/KDS_1.1.1/eclipse/ProcessorExpert/lib/Kinetis/pdd/inc/CMT_PDD.h</location>
-		</link>
-		<link>
-			<name>Static_Code/PDD/CRC_PDD.h</name>
-			<type>1</type>
-			<location>C:/Freescale/KDS_1.1.1/eclipse/ProcessorExpert/lib/Kinetis/pdd/inc/CRC_PDD.h</location>
+			<location>C:/Freescale/KDS_1.1.1/eclipse/ProcessorExpert/lib/Kinetis/pdd/inc/COP_PDD.h</location>
 		</link>
 		<link>
 			<name>Static_Code/PDD/DAC_PDD.h</name>
@@ -77,24 +72,9 @@
 			<location>C:/Freescale/KDS_1.1.1/eclipse/ProcessorExpert/lib/Kinetis/pdd/inc/DMA_PDD.h</location>
 		</link>
 		<link>
-			<name>Static_Code/PDD/EWM_PDD.h</name>
+			<name>Static_Code/PDD/FTFA_PDD.h</name>
 			<type>1</type>
-			<location>C:/Freescale/KDS_1.1.1/eclipse/ProcessorExpert/lib/Kinetis/pdd/inc/EWM_PDD.h</location>
-		</link>
-		<link>
-			<name>Static_Code/PDD/FMC_PDD.h</name>
-			<type>1</type>
-			<location>C:/Freescale/KDS_1.1.1/eclipse/ProcessorExpert/lib/Kinetis/pdd/inc/FMC_PDD.h</location>
-		</link>
-		<link>
-			<name>Static_Code/PDD/FTFE_PDD.h</name>
-			<type>1</type>
-			<location>C:/Freescale/KDS_1.1.1/eclipse/ProcessorExpert/lib/Kinetis/pdd/inc/FTFE_PDD.h</location>
-		</link>
-		<link>
-			<name>Static_Code/PDD/FTM_PDD.h</name>
-			<type>1</type>
-			<location>C:/Freescale/KDS_1.1.1/eclipse/ProcessorExpert/lib/Kinetis/pdd/inc/FTM_PDD.h</location>
+			<location>C:/Freescale/KDS_1.1.1/eclipse/ProcessorExpert/lib/Kinetis/pdd/inc/FTFA_PDD.h</location>
 		</link>
 		<link>
 			<name>Static_Code/PDD/GPIO_PDD.h</name>
@@ -117,11 +97,6 @@
 			<location>C:/Freescale/KDS_1.1.1/eclipse/ProcessorExpert/lib/Kinetis/pdd/inc/MCM_PDD.h</location>
 		</link>
 		<link>
-			<name>Static_Code/PDD/PDB_PDD.h</name>
-			<type>1</type>
-			<location>C:/Freescale/KDS_1.1.1/eclipse/ProcessorExpert/lib/Kinetis/pdd/inc/PDB_PDD.h</location>
-		</link>
-		<link>
 			<name>Static_Code/PDD/PDD_Types.h</name>
 			<type>1</type>
 			<location>C:/Freescale/KDS_1.1.1/eclipse/ProcessorExpert/lib/Kinetis/pdd/inc/PDD_Types.h</location>
@@ -142,16 +117,6 @@
 			<location>C:/Freescale/KDS_1.1.1/eclipse/ProcessorExpert/lib/Kinetis/pdd/inc/RTC_PDD.h</location>
 		</link>
 		<link>
-			<name>Static_Code/PDD/SAI_PDD.h</name>
-			<type>1</type>
-			<location>C:/Freescale/KDS_1.1.1/eclipse/ProcessorExpert/lib/Kinetis/pdd/inc/SAI_PDD.h</location>
-		</link>
-		<link>
-			<name>Static_Code/PDD/SDHC_PDD.h</name>
-			<type>1</type>
-			<location>C:/Freescale/KDS_1.1.1/eclipse/ProcessorExpert/lib/Kinetis/pdd/inc/SDHC_PDD.h</location>
-		</link>
-		<link>
 			<name>Static_Code/PDD/SIM_PDD.h</name>
 			<type>1</type>
 			<location>C:/Freescale/KDS_1.1.1/eclipse/ProcessorExpert/lib/Kinetis/pdd/inc/SIM_PDD.h</location>
@@ -167,29 +132,24 @@
 			<location>C:/Freescale/KDS_1.1.1/eclipse/ProcessorExpert/lib/Kinetis/pdd/inc/SysTick_PDD.h</location>
 		</link>
 		<link>
+			<name>Static_Code/PDD/TPM_PDD.h</name>
+			<type>1</type>
+			<location>C:/Freescale/KDS_1.1.1/eclipse/ProcessorExpert/lib/Kinetis/pdd/inc/TPM_PDD.h</location>
+		</link>
+		<link>
+			<name>Static_Code/PDD/UART0_PDD.h</name>
+			<type>1</type>
+			<location>C:/Freescale/KDS_1.1.1/eclipse/ProcessorExpert/lib/Kinetis/pdd/inc/UART0_PDD.h</location>
+		</link>
+		<link>
 			<name>Static_Code/PDD/UART_PDD.h</name>
 			<type>1</type>
 			<location>C:/Freescale/KDS_1.1.1/eclipse/ProcessorExpert/lib/Kinetis/pdd/inc/UART_PDD.h</location>
 		</link>
 		<link>
-			<name>Static_Code/PDD/USBDCD_PDD.h</name>
-			<type>1</type>
-			<location>C:/Freescale/KDS_1.1.1/eclipse/ProcessorExpert/lib/Kinetis/pdd/inc/USBDCD_PDD.h</location>
-		</link>
-		<link>
 			<name>Static_Code/PDD/USB_PDD.h</name>
 			<type>1</type>
 			<location>C:/Freescale/KDS_1.1.1/eclipse/ProcessorExpert/lib/Kinetis/pdd/inc/USB_PDD.h</location>
-		</link>
-		<link>
-			<name>Static_Code/PDD/VREF_PDD.h</name>
-			<type>1</type>
-			<location>C:/Freescale/KDS_1.1.1/eclipse/ProcessorExpert/lib/Kinetis/pdd/inc/VREF_PDD.h</location>
-		</link>
-		<link>
-			<name>Static_Code/PDD/WDOG_PDD.h</name>
-			<type>1</type>
-			<location>C:/Freescale/KDS_1.1.1/eclipse/ProcessorExpert/lib/Kinetis/pdd/inc/WDOG_PDD.h</location>
 		</link>
 	</linkedResources>
 </projectDescription>
