--- a/ATEAM_ROBO/.project
+++ b/ATEAM_ROBO/.project
@@ -32,6 +32,11 @@
 	</natures>
 	<linkedResources>
 		<link>
+			<name>Common</name>
+			<type>2</type>
+			<locationURI>PARENT-1-PROJECT_LOC/ATEAM_DummyProject/Common</locationURI>
+		</link>
+		<link>
 			<name>Static_Code/IO_Map/MK22F12.h</name>
 			<type>1</type>
 			<location>C:/Freescale/KDS_1.1.1/eclipse/ProcessorExpert/lib/Kinetis/iofiles/MK22F12.h</location>
